--- a/_config.yml
+++ b/_config.yml
@@ -2,18 +2,17 @@
 # Site settings
 # -----------------------------------------------------------------------------
 
-title: blank # the website title (if blank, full name will be used instead)
+title: Kodjo KOUDAKPO # the website title (if blank, full name will be used instead)
 first_name: Kodjo
 middle_name: 
 last_name: KOUDAKPO
-email: 
+email: kodjo.koudakpo@umontreal.ca
 description: > # the ">" symbol means to ignore newlines until "footer_text:"
   A simple, whitespace theme for academics. Based on [*folio](https://github.com/bogoli/-folio) design.
 footer_text: >
-  Powered by <a href="https://jekyllrb.com/" target="_blank">Jekyll</a> with <a href="https://github.com/alshedivat/al-folio">al-folio</a> theme.
-  Hosted by <a href="https://pages.github.com/" target="_blank">GitHub Pages</a>.
-  Photos from <a href="https://unsplash.com" target="_blank">Unsplash</a>.
-keywords: jekyll, jekyll-theme, academic-website, portfolio-website  # add your own keywords or leave empty
+  Email: kodjo.koudakpo@umontreal.ca <a href="https://kodjokoudakpo.github.io"> Visit my website </a>.  
+keywords:  # add your own keywords or leave empty
+
 
 lang: en # the language of your site (for example: en, fr, cn, ru, etc.)
 icon: ⚛️  # the emoji used as the favicon (alternatively, provide image name in /assets/img/)
