--- a/_data/repositories.yml
+++ b/_data/repositories.yml
@@ -1,9 +1,11 @@
 github_users:
   - torvalds
   - alshedivat
+  - kodjokoudakpo
 
 github_repos:
   - alshedivat/al-folio
+  - kodjokoudakpo/kodjokoudakpo.github.io
   - twbs/bootstrap
   - jekyll/jekyll
   - jquery/jquery
