--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -1,97 +1,130 @@
-- title: General Information
+- title: <strong> General Information </strong>
   type: map
   contents:
     - name: Full Name
-      value: Albert Einstein
-    - name: Date of Birth
-      value: 14th March 1879
+      value: Kodjo KOUDAKPO
+    - name: #Date of Birth
+      value: #14th March 1879
     - name: Languages
-      value: English, German
+      value: English, French, Ewe
 
-- title: Education
+- title: <strong> Education </strong>
   type: time_table
   contents:
-    - title: PhD
-      institution: University of Zurich, Zurich, Switzerland
-      year: 1905
+    - title: PhD Candidate in Economics
+      institution: University of Montreal, Canada
+      year: 2019-Present
       description:
-        - Description 1.
-        - Description 2.
-        - title: Description 3.
-          contents:
-            - Sub-description 1.
-            - Sub-description 2.
-    - title: Federal teaching diploma
-      institution: Eidgenössische Technische Hochschule, Zurich, Switzerland
-      year: 1900
+        #- Description 1.
+        #- Description 2.
+        #- title: Description 3.
+         # contents:
+         #   - Sub-description 1.
+         #   - Sub-description 2.
+    - title: MSc. in Statistics and Economics 
+      institution: National School of Statistics and Economic Analysis, Dakar, Senegal
+      year: 2018
       description:
-        - Description 1.
-        - Description 2.
+        #- Description 1.
+        #- Description 2.
+    - title: BSc. in Applied Statistics  
+      institution: National School of Statistics and Economic Analysis, Dakar, Senegal
+      year: 2016
+      description:
+        #- Description 1.
+        #- Description 2.
 
-- title: Experience
+- title:  <strong> Experience </strong>
   type: time_table
   contents:
-    - title: Professor of Theoretical Physics
-      institution: Institute for Advanced Study, Princeton University
-      year: 1933 - 1955
+    - title: Economist-Statistician Consultant
+      institution: World Bank Group, Macro -Trade and Investment, Global Practice, Washington DC, USA
+      year: 2023
       description:
-        - Description 1.
-        - Description 2.
-        - title: Description 3.
-          contents:
-            - Sub-description 1.
-            - Sub-description 2.
-    - title: Visiting Professor
-      institution: California Institute of Technology, Pasadena, California, US
-      year: 1933
+       # - Description 1.
+       # - Description 2.
+       # - title: Description 3.
+         # contents:
+         #   - Sub-description 1.
+          #  - Sub-description 2.
+    - title: Research Assistant
+      institution: Observatoire de la Francophonie Economique, Montreal, Canada
+      year: 2023
       description:
-        - Description 1.
-        - Description 2.
-
-    - title: Director
-      institution: Kaiser Wilhelm Institute for Physics, Berlin, Germany.
-      year: 1917-1933
-
-    - title: Professor of Theoretical Physics
-      institution: Karl-Ferdinand University, Prague, Czechoslovakia
-      year: 1911 - 1917
+       # - Description 1.
+       # - Description 2.
+    - title: Economist-Statistician Consultant
+      institution: World Bank Group, Poverty and Equity, Global Practice, Washington DC, USA
+      year: 2018 - 2022
       description:
+       # - Description 1.
+       # - Description 2.
+       # - title: Description 3.
+         # contents:
+         #   - Sub-description 1.
+          #  - Sub-description 2.
+    - title: Research Consultant
+      institution: National Opinion Research Center (NORC), Chicago, USA
+      year: 2020
+      description:
+       # - Description 1.
+       # - Description 2.
 
-    - title: Associate Professor of Theoretical Physics
-      institution: University of Zurich, Zurich, Switzerland
-      year: 1909 - 1911
+    - title: Statistician Consultant
+      institution: Junior Enterprise (ENSAE), Dakar, Senegal.
+      year: 2017
 
-- title: Open Source Projects
+    - title: Economist (Intern)
+      institution: Central Bank of West African States (BCEAO-HQ), Dakar, Senegal
+      year: 2017
+      description: 
+
+    - title: Research Analyst 
+      institution: Laboratoire de Recherche Economiques et Monétaires (LAREM), LAREM, Senegal
+      year: 2016
+
+    - title: Research Analyst 
+      institution: Institut National de la Statistique, des Etudes Economiques et de la démographie
+      year: 2015
+
+ # - title: Open Source Projects
+   # type: time_table
+   # contents:
+     # - title: <a href="https://github.com/alshedivat/al-folio">al-folio</a>
+       # year: 2015-now
+       # description: A beautiful, simple, clean, and responsive Jekyll theme for academics.
+
+- title: <strong> Fellowships, Honors and Awards </strong>
   type: time_table
   contents:
-    - title: <a href="https://github.com/alshedivat/al-folio">al-folio</a>
-      year: 2015-now
-      description: A beautiful, simple, clean, and responsive Jekyll theme for academics.
-
-- title: Honors and Awards
-  type: time_table
-  contents:
-    - year: 1921
+    - year: 2019-Present
       items: 
-        - Nobel Prize in Physics 
-        - Matteucci Medal
-    - year: 2029
+        - Ph.D. Fellowship, Department of Economics, University of Montreal 
+        - Ph.D. Fellowship, CIREQ, University of Montreal 
+    - year: 2019-2021
       items: 
-        - Max Planck Medal
-
-- title: Academic Interests
-  type: nested_list
-  contents:
-    - title: Topic 1.
+        - Tuition fees waiver Scholarship, University of Montreal 
+    - year: 2016-2018
       items: 
-        - Description 1.
-        - Description 2.
-    - title: Topic 2.
-      items:
-        - Description 1.
-        - Description 2.
+        - Excellence Scholarship, United Nations Development Programme 
+    - year: 2012-2018
+      items: 
+        - Tuition fees waiver Scholarship, ENSAE, Senegal
+    - year: 2012-2014
+      items: 
+        - Excellence Scholarship, Odon- Vallet, ENSAE, Senegal
+       # - Ph.D. Fellowship, CIREQ, University of Montreal
+      # items: 
+       # - Excellence Scholarship, United Nations Development Programme
+   # - year: 2012-2016
+     #   items:
+     #   - Tuition fee waiver Scholarship,ENSAE, Senegal
+    #- year: 2012-2014
+    #    items: 
+     #   - Excellence Scholarship, Odon- Vallet, ENSAE, Senegal
+    
 
-- title: Other Interests
+- title: <strong> Other Interests </strong>
   type: list
   contents:
-    - <u>Hobbies:</u> Hobby 1, Hobby 2, etc.
+    - <u>Hobbies:</u> Soccer (Football) , Travel, Society games.
