--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -84,7 +84,7 @@
       year: 2016
 
     - title: Research Analyst 
-      institution: Institut National de la Statistique, des Etudes Economiques et de la démographie
+      institution: Institut National de la Statistique, des Etudes Economiques et de la Démographie, Togo
       year: 2015
 
  # - title: Open Source Projects
@@ -101,6 +101,9 @@
       items: 
         - Ph.D. Fellowship, Department of Economics, University of Montreal 
         - Ph.D. Fellowship, CIREQ, University of Montreal 
+    - year: 2022
+      items: 
+        - World Bank Group VPU Team awards
     - year: 2019-2021
       items: 
         - Tuition fees waiver Scholarship, University of Montreal 
@@ -121,7 +124,7 @@
      #   - Tuition fee waiver Scholarship,ENSAE, Senegal
     #- year: 2012-2014
     #    items: 
-     #   - Excellence Scholarship, Odon- Vallet, ENSAE, Senegal
+     #   - Excellence Scholarship, Odon- Vallet, ENSAE, Senegal 
     
 
 - title: <strong> Other Interests </strong>
