--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -39,7 +39,7 @@
   contents:
     - title: Economist-Statistician Consultant
       institution: World Bank Group, Macro -Trade and Investment, Global Practice, Washington DC, USA
-      year: 2023
+      year: 2023-Present
       description:
        # - Description 1.
        # - Description 2.
@@ -130,4 +130,4 @@
 - title: <strong> Other Interests </strong>
   type: list
   contents:
-    - <u>Hobbies:</u> Soccer (Football) , Travel, Society games.
+    - <u>Hobbies:</u> Soccer (Football), Travel, Society games.
