--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -85,7 +85,7 @@
 
     - title: Research Analyst 
       institution: Institut National de la Statistique, des Etudes Economiques et de la Démographie, Togo
-      year: 2015
+      year: 2014-2015
 
  # - title: Open Source Projects
    # type: time_table
