--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -39,7 +39,7 @@
   contents:
     - title: Economist-Statistician Consultant
       institution: World Bank Group, Macro -Trade and Investment, Global Practice, Washington DC, USA
-      year: 2023-Present
+      year: 2023-2024
       description:
        # - Description 1.
        # - Description 2.
