--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -13,7 +13,7 @@
   contents:
     - title: PhD Candidate in Economics
       institution: University of Montreal, Canada
-      year: 2019-Present
+      year: 2019-2025 (Expected)
       description:
         #- Description 1.
         #- Description 2.
@@ -64,7 +64,7 @@
          #   - Sub-description 1.
           #  - Sub-description 2.
     - title: Research Consultant
-      institution: National Opinion Research Center (NORC), Chicago, USA
+      institution: Research Technical Assistance Center (RTAC-USAID), Washington D.C., USA
       year: 2020
       description:
        # - Description 1.
