--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ middle_name:
 last_name: KOUDAKPO
 email: kodjo.koudakpo@umontreal.ca
 description: > # the ">" symbol means to ignore newlines until "footer_text:"
-  A simple, whitespace theme for academics. Based on [*folio](https://github.com/bogoli/-folio) design.
+  Welcome to my personal Website!
 footer_text: >
   Email: kodjo.koudakpo@umontreal.ca <a href="https://kodjokoudakpo.github.io"> Visit my website </a>.  
 keywords:  # add your own keywords or leave empty
