--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -27,7 +27,7 @@
       description:
         #- Description 1.
         #- Description 2.
-    - title: BSc. in Applied Statistics  
+    - title: MSc. in Applied Statistics  
       institution: National School of Statistics and Economic Analysis, Dakar, Senegal
       year: 2016
       description:
@@ -55,7 +55,7 @@
        # - Description 2.
     - title: Economist-Statistician Consultant
       institution: World Bank Group, Poverty and Equity, Global Practice, Washington DC, USA
-      year: 2018 - 2022
+      year: 2018 - 2023
       description:
        # - Description 1.
        # - Description 2.
