--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -64,7 +64,7 @@
          #   - Sub-description 1.
           #  - Sub-description 2.
     - title: Research Consultant
-      institution: Research Technical Assistance Center (RTAC-USAID), Washington D.C., USA
+      institution: Research Technical Assistance Center (USAID-RTAC), Washington D.C., USA
       year: 2020
       description:
        # - Description 1.
