--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 # Site settings
 # -----------------------------------------------------------------------------
 
-title: Kodjo KOUDAKPO # the website title (if blank, full name will be used instead)
+title: Moudachirou Oumarou # the website title (if blank, full name will be used instead)
 first_name: Kodjo
 middle_name: 
 last_name: KOUDAKPO
@@ -17,7 +17,7 @@ keywords:  # add your own keywords or leave empty
 lang: en # the language of your site (for example: en, fr, cn, ru, etc.)
 icon: ⚛️  # the emoji used as the favicon (alternatively, provide image name in /assets/img/)
 
-url: https://kodjokoudakpo.github.io # the base hostname & protocol for your site
+url: https://oumaroumoudachirou.github.io # the base hostname & protocol for your site
 baseurl:  # the subpath of your site, e.g. /blog/
 last_updated: false # set to true if you want to display last updated in the footer
 impressum_path:  # set to path to include impressum link in the footer, use the same path as permalink in a page, helps to conform with EU GDPR
